# todo-rs

./: .envrc.template  Cargo.toml  LICENSE  README.md  docker-compose.yml
docs/: dataflow.dio  usecase.md
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs  model.rs
src/app/: Cargo.toml
src/app/src/: config.rs  gateway.rs  main.rs
src/app/src/api/: create_todo.rs  mod.rs
src/app/src/rest_error/: bad_request.rs  mod.rs
src/domain/: mod.rs  model.rs  usecase.rs
src/domain/todo-model/: Cargo.toml
src/domain/todo-model/src/: error.rs  id.rs  lib.rs  text.rs
src/domain/todo-usecase/: Cargo.toml
src/domain/todo-usecase/src/: error.rs  lib.rs
src/domain/todo-usecase/src/gateway/: mod.rs  rdb.rs
src/domain/todo-usecase/src/interactor/: create_todo.rs  mod.rs
src/domain/usecase/: mod.rs
src/gateway/rdb/: Cargo.toml
src/gateway/rdb/src/entity/: mod.rs  prelude.rs  todo_table.rs
src/gateway/rdb/src/service/: insert_todo.rs  mod.rs
