[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["./src/domain/todo-model", "./src/domain/todo-usecase"]

[workspace.dependencies]
thiserror = "1.0.53"
sea-orm = { version = "0.12.2", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
