[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "./migration",
    "./src/domain/todo-model",
    "./src/domain/todo-usecase",
    "./src/gateway/rdb",
]

[workspace.dependencies]
thiserror = "1.0.53"
chrono = "0.4.26"
serde = "1.0.193"
serde_json = "1.0.109"
