[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "todo-app"
path = "./src/app/src/main.rs"

[workspace]
members = [
    "./migration",
    "./src/app",
    "./src/domain/todo-model",
    "./src/domain/todo-usecase",
    "./src/gateway/rdb",
]

[workspace.dependencies]
thiserror = "1.0.53"
chrono = "0.4.26"
serde = "1.0.193"
serde_json = "1.0.109"
async-trait = "0.1.76"
