[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
todo-model = { path = "../domain/todo-model" }
todo-usecase = { path = "../domain/todo-usecase" }
rdb = { path = "../gateway/rdb" }

axum = "0.7.3"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { workspace = true }
