[package]
name = "rdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
todo-model = { path = "../../domain/todo-model" }
todo-usecase = { path = "../../domain/todo-usecase" }
sea-orm = { version = "0.12.10", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "mock",
] }
